--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/green_1</color>
+    <color name="colorPrimaryDark">@color/teal_1</color>
+    <color name="colorAccent">@color/lime_1</color>
+
+    <color name="blue_1">#165873</color>
+    <color name="teal_1">#124C59</color>
+    <color name="green_1">#428C5C</color>
+    <color name="light_green_1">#4EA64B</color>
+    <color name="lime_1">#ADD96C</color>
 </resources>
