--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -1,75 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="ch.ethz.vs.se.team7.carbonfootprintmonitor.MainActivity">
 
+    <LinearLayout
+        android:id="@+id/actionbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/welcome_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        <TextView
+            android:id="@+id/welcome_user"
+            android:layout_width="wrap_content"
+            android:layout_height="52dp"
+            android:layout_weight="1"
+            android:text="@string/app_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.08" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/location"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
+    <TableLayout
+        android:id="@+id/table_layout_main"
+        android:layout_below="@+id/actionbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="440dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="and travelling with a speed of "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.309" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/textViewSpeed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/speed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.394" />
+            <TextView
+                android:id="@+id/table_text_0_0"
+                style="@style/table_text_view"
+                android:text="Transport" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You are - "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.518"
-        app:layout_constraintHorizontal_bias="0.501" />
+            <TextView
+                android:id="@+id/table_text_0_1"
+                style="@style/table_text_view"
+                android:text="Time" />
 
-    <TextView
-        android:id="@+id/textViewDetectedActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="(DetectedActivity)"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.605"
-        app:layout_constraintHorizontal_bias="0.501" />
+            <TextView
+                android:id="@+id/table_text_0_2"
+                style="@style/table_text_view"
+                android:text="Distance" />
+        </TableRow>
 
-</android.support.constraint.ConstraintLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ImageView
+                android:id="@+id/image_walk"
+                style="@style/table_icon_view"
+                app:srcCompat="@drawable/ic_directions_walk_black_48dp" />
+
+            <TextView
+                android:id="@+id/table_text_1_1"
+                style="@style/table_text_view"
+                android:text="2h30min" />
+
+            <TextView
+                android:id="@+id/table_text_1_2"
+                style="@style/table_text_view"
+                android:text="5.7km" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ImageView
+                android:id="@+id/image_bike"
+                style="@style/table_icon_view"
+                app:srcCompat="@drawable/ic_directions_bike_black_48dp" />
+
+            <TextView
+                android:id="@+id/table_text_2_1"
+                style="@style/table_text_view"
+                android:text="0h 30min" />
+
+            <TextView
+                android:id="@+id/table_text_2_2"
+                style="@style/table_text_view"
+                android:text="4km" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ImageView
+                android:id="@+id/image_car"
+                style="@style/table_icon_view"
+                app:srcCompat="@drawable/ic_directions_car_black_48dp" />
+
+            <TextView
+                android:id="@+id/table_text_3_1"
+                style="@style/table_text_view"
+                android:text="0h 59min" />
+
+            <TextView
+                android:id="@+id/table_text_3_2"
+                style="@style/table_text_view"
+                android:text="33km" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ImageView
+                android:id="@+id/image_tram"
+                style="@style/table_icon_view"
+                app:srcCompat="@drawable/ic_tram_black_48dp" />
+
+            <TextView
+                android:id="@+id/table_text_4_1"
+                style="@style/table_text_view"
+                android:text="1h 24min" />
+
+            <TextView
+                android:id="@+id/table_text_4_2"
+                style="@style/table_text_view"
+                android:text="19.4km" />
+        </TableRow>
+    </TableLayout>
+
+    <RelativeLayout
+        android:layout_below="@id/table_layout_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="and travelling with a speed of "
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.309" />
+
+        <TextView
+            android:id="@+id/textViewSpeed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/speed"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.394" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You are - "
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.518" />
+
+        <TextView
+            android:id="@+id/textViewDetectedActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(DetectedActivity)"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.605" />
+
+        <TextView
+            android:id="@+id/textViewLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/location"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.202" />
+    </RelativeLayout>
+
+</RelativeLayout>
