--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -59,5 +59,5 @@
         android:layout_height="64dp"
         android:layout_alignTop="@+id/edit_name"
         android:layout_alignEnd="@+id/text_question_name"
-        android:src="@drawable/ic_forward_black_48dp" />
+        android:src="@mipmap/ic_forward" />
 </RelativeLayout>
