--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -15,11 +15,7 @@
         android:layout_alignParentStart="true"
         android:ems="16"
         android:paddingTop="24dp"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:fontFamily="sans-serif-medium"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        style="@android:style/TextAppearance.DeviceDefault.Large"/>
+        style="@style/title_style"/>
 
     <ImageView
         android:id="@+id/image_smart_transport_logo"
