--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -205,4 +205,16 @@
             app:fabSize="normal" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/vehicleDialogBtn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="27dp"
+        android:layout_marginEnd="12dp"
+        android:text="Select Vehicle" />
+
+
 </RelativeLayout>
