Moved detection to main, fixed granularity and table creation

--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -199,6 +199,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView_location"
             android:text="(Detected Activity)" />
+
+        <Button
+            android:id="@+id/viewDbButton"
+            style="@style/Widget.AppCompat.Button.Colored"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:text="DB" />
     </RelativeLayout>
 
     <LinearLayout
