--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -153,67 +153,69 @@
         android:layout_below="@id/table_layout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/fab_linear_layout"
-        android:layout_marginLeft="20dp" >
+        android:layout_toEndOf="@+id/fab_linear_layout" >
 
-        <TextView
-            android:id="@+id/textView_debug"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="Debugging options" />
+        <RelativeLayout
+            android:id="@+id/time_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/viewDbButton"
+            android:gravity="center">
 
-        <TextView
-            android:id="@+id/textView_speed_capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_debug"
-            android:text="Current Speed: " />
+            <Button
+                android:id="@+id/button_day"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/today"
+                android:background="@drawable/RoundedBtnShapeLeft"/>
 
-        <TextView
-            android:id="@+id/textView_speed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_debug"
-            android:layout_toRightOf="@id/textView_speed_capture"
-            android:text="@string/speed" />
+            <Button
+                android:id="@+id/button_week"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
+                android:text="@string/weekly"
+                android:layout_toEndOf="@+id/button_day"
+                android:background="@drawable/RoundedBtnShape"/>
 
+            <Button
+                android:id="@+id/button_month"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/monthly"
+                android:layout_toEndOf="@+id/button_week"
+                android:background="@drawable/RoundedBtnShapeRight"/>
 
-        <TextView
-            android:id="@+id/textView_location_capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_speed_capture"
-            android:text="Current Location: " />
-
-        <TextView
-            android:id="@+id/textView_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_speed_capture"
-            android:layout_toRightOf="@+id/textView_location_capture"
-            android:text="@string/location" />
-        <TextView
-            android:id="@+id/textViewDetectedActivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_location"
-            android:text="(Detected Activity)" />
+        </RelativeLayout>
 
         <Button
             android:id="@+id/viewDbButton"
             style="@style/Widget.AppCompat.Button.Colored"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:text="DB" />
+
+        <Button
+            android:id="@+id/vehicleDialogBtn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_toRightOf="@id/viewDbButton"
+            android:text="Select Vehicle" />
+
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/fab_linear_layout"
-        android:layout_width="120dp"
+        android:layout_width="110dp"
         android:layout_height="120dp"
         android:layout_below="@+id/table_layout_main"
         android:gravity="center"
@@ -224,23 +226,11 @@
             android:id="@+id/fab_toggle_energy"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:baselineAlignBottom="true"
             android:layout_gravity="center"
+            android:baselineAlignBottom="true"
             android:clickable="true"
             android:src="@drawable/world_leaf_eco"
             app:fabSize="normal" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/vehicleDialogBtn"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="27dp"
-        android:layout_marginEnd="12dp"
-        android:text="Select Vehicle" />
-
 
 </RelativeLayout>
