--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
             android:id="@+id/welcome_user"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:gravity="center"
             style="@style/title_style" />
 
@@ -27,9 +26,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginTop="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"
             android:clickable="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:src="@mipmap/ic_gps_on"
             app:backgroundTint="@color/green"
             app:fabSize="normal" />
@@ -49,6 +48,7 @@
             <TextView
                 android:id="@+id/table_text_0_0"
                 style="@style/table_text_view"
+                android:layout_marginStart="10dp"
                 android:text="@string/legend_transport"
                 android:textStyle="bold" />
 
@@ -155,17 +155,20 @@
         android:layout_height="match_parent"
         android:layout_toEndOf="@+id/fab_linear_layout" >
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/time_layout"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/viewDbButton"
+            android:layout_marginEnd="4dp"
             android:gravity="center">
 
             <Button
                 android:id="@+id/button_day"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="3"
                 android:layout_height="wrap_content"
                 android:text="@string/today"
                 android:background="@drawable/rounded_btn_shape_left"/>
@@ -173,24 +176,24 @@
             <Button
                 android:id="@+id/button_week"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="3"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
                 android:layout_marginStart="2dp"
                 android:text="@string/weekly"
-                android:layout_toEndOf="@+id/button_day"
                 android:background="@drawable/rounded_btn_shape"/>
 
             <Button
                 android:id="@+id/button_month"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="3"
                 android:layout_height="wrap_content"
                 android:text="@string/monthly"
-                android:layout_toEndOf="@+id/button_week"
                 android:background="@drawable/rounded_btn_shape_right"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <Button
             android:id="@+id/viewDbButton"
