--- a/Android/app/src/main/res/values/styles.xml
+++ b/Android/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
     <style name="table_icon_view">
         <item name="android:layout_width">0px</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginStart">10dp</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:layout_weight">3</item>
     </style>
