--- a/Android/app/src/main/res/drawable/rounded_btn_shape_right.xml
+++ b/Android/app/src/main/res/drawable/rounded_btn_shape_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/light_green_1" />
     <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="20dp"
