--- a/Android/app/src/main/res/drawable/rounded_btn_shape_selected.xml
+++ b/Android/app/src/main/res/drawable/rounded_btn_shape_selected.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/light_green_1" />
+    <solid android:color="@color/colorPrimaryDark" />
     <corners
-        android:bottomLeftRadius="20dp"
+        android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp"
-        android:topLeftRadius="20dp"
+        android:topLeftRadius="5dp"
         android:topRightRadius="5dp" />
 </shape>
