--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -164,34 +164,45 @@
             android:layout_marginEnd="4dp"
             android:gravity="center">
 
-            <Button
-                android:id="@+id/button_day"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:text="@string/today"
-                android:background="@drawable/rounded_btn_shape_left"/>
+            <RadioGroup
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/button_week"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="2dp"
-                android:layout_marginStart="2dp"
-                android:text="@string/weekly"
-                android:background="@drawable/rounded_btn_shape"/>
+                <RadioButton
+                    android:id="@+id/button_day"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_weight="3"
+                    android:checked="true"
+                    android:layout_height="wrap_content"
+                    android:text="@string/today"
+                    android:textColor="@android:color/white"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rounded_button_left"/>
 
-            <Button
-                android:id="@+id/button_month"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:text="@string/monthly"
-                android:background="@drawable/rounded_btn_shape_right"/>
+                <RadioButton
+                    android:id="@+id/button_week"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginStart="2dp"
+                    android:text="@string/weekly"
+                    android:textColor="@android:color/white"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rounded_button_middle"/>
+
+                <RadioButton
+                    android:id="@+id/button_month"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:text="@string/monthly"
+                    android:textColor="@android:color/white"
+                    android:button="@android:color/transparent"
+                    android:background="@drawable/rounded_button_right"/>
+            </RadioGroup>
 
         </LinearLayout>
 
@@ -231,7 +242,6 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:baselineAlignBottom="true"
-            android:clickable="true"
             android:src="@drawable/world_leaf_eco"
             app:fabSize="normal" />
     </LinearLayout>
