--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    xmlns:android.support.design="http://schemas.android.com/tools"
+    android:background="@drawable/smart_energy_background_300"
     android:orientation="horizontal">
 
     <TextView
@@ -20,10 +19,10 @@
 
     <ImageView
         android:id="@+id/image_smart_transport_logo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="226dp"
         android:layout_marginTop="12dp"
-        app:srcCompat="@drawable/world_leaf_eco"
+        app:srcCompat="@drawable/smart_energy_logo_300"
         android:layout_below="@+id/text_app_title"/>
 
     <TextView
