--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -213,8 +213,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentStart="true"
             android:text="View Database" />
+
+
+        <Button
+            android:id="@+id/pieChartButton"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/time_layout"
+            android:layout_alignParentBottom="true"
+            android:text="Pie Chart" />
         <!--
         <Button
             android:id="@+id/vehicleDialogBtn"
