--- a/Android/app/src/main/res/xml/pref_visualizer.xml
+++ b/Android/app/src/main/res/xml/pref_visualizer.xml
@@ -16,4 +16,11 @@
         android:summary="Select Tolerance Percentage"
         android:max="50"
         android:defaultValue="10" />
+
+    <SeekBarPreference
+        android:key="refreshInterval"
+        android:title="Refresh Inteval"
+        android:summary="Interval for database updates (Lower => Higher Accuracy => Slower performance)"
+        android:max="1000"
+        android:defaultValue="10" />
 </PreferenceScreen>
