--- a/Android/app/src/main/res/values/styles.xml
+++ b/Android/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:text">@string/app_name</item>
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/green_1</item>
         <item name="android:shadowColor">@color/teal_1</item>
         <item name="android:shadowDx">5</item>
@@ -29,7 +29,7 @@
         <item name="android:layout_width">0px</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">10dp</item>
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">12dp</item>
         <item name="android:layout_weight">3</item>
     </style>
 
@@ -37,7 +37,8 @@
     <style name="table_text_view">
         <item name="android:layout_width">0px</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginEnd">6dp</item>
         <item name="android:layout_weight">3</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textStyle">bold|italic</item>
