Fix null value in user welcome

--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:layout_width="260dp"
             android:layout_height="72dp"
             android:layout_marginStart="14dp"
-            android:gravity=""
+            android:gravity="center"
+            android:textSize="26sp"
             android:autoSizeTextType="uniform"
             android:autoSizeMinTextSize="12sp"
             android:autoSizeMaxTextSize="32sp"
