--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,14 @@
 
     <TextView
         android:id="@+id/text_app_title"
+        style="@style/title_style"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="64dp"
         android:layout_alignParentStart="true"
+        android:gravity="center"
+        android:textAlignment="center"
         android:ems="16"
-        android:paddingTop="24dp"
-        style="@style/title_style"/>
+        android:textSize="42sp" />
 
     <ImageView
         android:id="@+id/image_smart_transport_logo"
